# phone_info_service

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
number_checker/: admin.py  apps.py  forms.py  logic.py  models.py  services.py  urls.py  views.py
number_checker/migrations/: 0001_initial.py
number_checker/templates/: base.html
number_checker/templates/number_checker/: check_phone.html  history.html  result.html
