[project]
name = "phone-info"
version = "0.1.0"
description = "Сервис определения принадлежности мобильных номеров"
authors = [
    {name = "Dmitriy Bulygin",email = "demetrius.storm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django (>=4.0,<6.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-decouple (==3.8)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "phone_info", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
